--- a/package.json
+++ b/package.json
@@ -12,6 +12,10 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "dotenv": "16.3.1",
     "ethers": "5.7.2"
+  },
+  "devDependencies": {
+    "@types/node": "^20.3.2"
   }
 }
